--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
+    <link rel="stylesheet" href="asset/css/style.css">
     <title>@kmerklein | Minha página</title>
 </head>
+
 <body>
-    Minha página web
+    <section class="hero is-primary is-medium">
+        <div class="hero-head">
+            <header class="nav">
+                <div class="cotainer">
+                    <div class="nav-left">
+                        <a href="#" class="nav-item">
+                            <img src="" alt="Logotipo" class="logo">
+                        </a>
+                    </div>
+                    <div class="nav-right nav-menu">
+                        <a href="http://github.com/kmerklein" target="_blank" class="nav-item">Github</a>
+                        <a href="http://instaram.com/kmerklein" target="_blank" class="nav-item">Instagram</a>
+                        <a href="http://facebook.com/kmerklein" target="_blank" class="nav-item">Facebook</a>
+                        <span class="nav-item">
+                            <a href="" class="button is-primary is-inverted">
+                                <span class="icon">
+                                    <i class="fa fa-youtube"></i>
+                                </span>
+                                <span>Youtube</span>
+                            </a>
+                        </span>
+                    </div>
+                </div>
+            </header>
+        </div>
+    </section>
 </body>
+
 </html>
