inclusão de img no menu

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="cotainer">
                     <div class="nav-left">
                         <a href="#" class="nav-item">
-                            <img src="" alt="Logotipo" class="logo">
+                            <img src="asset/img/logo.png" alt="Logotipo" class="logo">
                         </a>
                     </div>
                     <div class="nav-right nav-menu">
