--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <section class="hero is-primary is-medium">
         <div class="hero-head">
             <header class="nav">
-                <div class="cotainer">
+                <div class="container">
                     <div class="nav-left">
                         <a href="#" class="nav-item">
-                            <img src="asset/img/logo.png" alt="Logotipo" class="logo">
+                            <img src="asset/img/logo.png" alt="Logotipo kmerklein" class="logo">
                         </a>
                     </div>
                     <div class="nav-right nav-menu">
