atualização do menu

--- a/index.html
+++ b/index.html
@@ -12,28 +12,26 @@
 </head>
 
 <body>
-    <section class="hero is-primary is-medium">
-        <div class="hero-head">
-            <header class="nav">
-                <div class="container">
-                    <div class="nav-left">
-                        <a href="#" class="nav-item">
-                            <img src="asset/img/logo.png" alt="Logotipo kmerklein" class="logo">
+    <section class="hero is-dark is-medium">
+        <div class="container is-fluid">
+            <header class="level">
+                <div class="level-left">
+                    <a href="#" class="level-item">
+                        <img src="asset/img/logo.png" alt="Logotipo kmerklein" class="logo">
+                    </a>
+                </div>
+                <div class="level-right nav-menu">
+                    <a href="http://github.com/kmerklein" target="_blank" class="level-item">Github</a>
+                    <a href="http://instagram.com/kmerklein" target="_blank" class="level-item">Instagram</a>
+                    <a href="http://facebook.com/kmerklein" target="_blank" class="level-item">Facebook</a>
+                    <span class="level-item">
+                        <a href="" class="button is-danger is-inverted">
+                            <span class="icon">
+                                <i class="fa fa-youtube"></i>
+                            </span>
+                            <span>Youtube</span>
                         </a>
-                    </div>
-                    <div class="nav-right nav-menu">
-                        <a href="http://github.com/kmerklein" target="_blank" class="nav-item">Github</a>
-                        <a href="http://instaram.com/kmerklein" target="_blank" class="nav-item">Instagram</a>
-                        <a href="http://facebook.com/kmerklein" target="_blank" class="nav-item">Facebook</a>
-                        <span class="nav-item">
-                            <a href="" class="button is-primary is-inverted">
-                                <span class="icon">
-                                    <i class="fa fa-youtube"></i>
-                                </span>
-                                <span>Youtube</span>
-                            </a>
-                        </span>
-                    </div>
+                    </span>
                 </div>
             </header>
         </div>
